[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-mocking-server"
version = "1.0.0"
description = "Fast OpenAPI mock server that uses Faker schemas to generate dynamic test endpoints on the fly."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
